# planar_manipulator_robot

planar_manipulator_defs/: CMakeLists.txt  package.xml
planar_manipulator_defs/launch/: description_test.launch  description_test_two_arms.launch  upload_robot.launch  upload_robot_6dof.launch  upload_robot_two_arms.launch
planar_manipulator_defs/robots/: planar_manipulator.srdf  planar_manipulator.urdf  planar_manipulator_6dof.srdf  planar_manipulator_6dof.urdf  planar_two_arms.srdf  planar_two_arms.urdf
